# pleco-flashcards

./: .gitignore  README.md
chinese-cursive-script/: README.md  chinese-cursive-script.perlesson  chinese-cursive-script.pleco
flashcards/chinese-cursive-crash-course/: README.md  chinese-cursive-crash-course.enumbylesson  chinese-cursive-crash-course.pleco
flashcards/chinese-cursive-script/: README.md  chinese-cursive-script.pleco
tooling/: CHANGELOG.md  pleco-tooling.cabal
tooling/app/: GenPleco.hs
