cabal-version:      3.0
name:               pleco-tooling
version:            0.1.0
synopsis:           Tooling for Pleco flashcards
homepage:           https://github.com/edsko/pleco-flashcards
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common lang
  ghc-options:
      -Wall
      -Wredundant-constraints
      -Wprepositive-qualified-module
  build-depends:
      base >= 4.16
  default-language:
      GHC2021
  default-extensions:
      DerivingStrategies

executable genpleco
  import:
      lang
  main-is:
      GenPleco.hs
  hs-source-dirs:
      app
  ghc-options:
      -main-is GenPleco
  other-modules:
      Pleco.Gen.Cmdline
      Pleco.Gen.Convert
      Pleco.Gen.Convert.PerChapter
      Pleco.Gen.Flashcards
  build-depends:
    , containers
    , mtl >= 2.3.1
    , transformers >= 0.5.6.2
    , optparse-applicative

